--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             border: 3px;
             box-shadow: 2px black;
             margin-bottom: 20px;
-            
+
 
         }
-        .image img{
+
+        .image img {
             border-radius: 0.3in;
         }
 
@@ -38,15 +39,22 @@
             background-color: cornsilk;
         }
 
-        .home {
-            margin: 7px;
-            border: 2px;
-            border-radius: 2in;
-            background-color: rgb(146, 167, 230);
-            padding: 15px;
-            color: blue;
-            margin-bottom: 20px;
+        .home button {
 
+
+            border-radius: 22px;
+            background-color: rgb(146, 167, 230);
+            border: none;
+            color: blue;
+            padding: 13px;
+            text-align: center;
+            display: block;
+            margin: 5px auto;
+
+
+        }
+        .home{
+            text-align: center;
         }
     </style>
 </head>
@@ -72,7 +80,7 @@
             </h2>
         </div>
         <span class="home">
-            Read More
+            <button>Read More</button>
         </span>
 
     </div>
