--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="main">
         <div class="image">
-            <img width="455" src="image/image.jpeg" alt="">
+            <img width="455" src="image.jpeg" alt="">
 
         </div>
         <span class="boxes">
